[package]
name = "assetMinting"
version = "0.9.0"
authors = ["puneet <puneet@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm", branch = "0.9",  path = "packages/std" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.55"

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", branch = "0.9",  path = "packages/schema" }
cosmwasm-storage = { git = "https://github.com/CosmWasm/cosmwasm", branch = "0.9",  path = "packages/storage"}
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm", branch = "0.9",  path = "packages/vm", default-features = false }
